--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -13,7 +13,8 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 'node'
+        node-version: latest
+        cache: 'npm'
     - name: Install dependencies
       run: npm install
 
