--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -13,8 +13,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: latest
-        cache: 'npm'
+        node-version: '23.x'
     - name: Install dependencies
       run: npm install
 
