--- a/app.yaml
+++ b/app.yaml
@@ -1,21 +1,5 @@
-name: App Yaml
-
-on: push
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '23.x'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run script
-        run: npm run auto
+runtime: nodejs18
+env: standard
+handlers:
+  - url: /.*
+    script: auto
