--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,9 @@
-runtime: nodejs18
-env: standard
+runtime: nodejs18  # Specify the Node.js runtime version
+
 handlers:
+  - url: /static
+    static_dir: build/static
+
   - url: /.*
-    script: auto
+    static_files: build/index.html
+    upload: build/index.html
