--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -32,4 +32,4 @@ jobs:
           run: gcloud config set project nomadic-vertex-444204-s5
 
         - name: Deploy to Google Cloud
-          run: gcloud run deploy
+          run: gcloud app deploy
