--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -21,6 +21,9 @@ jobs:
         - name: Build project
           run: npm run build
 
+        - name: Build Docker
+          run: docker-compose build
+
         - name: Set up Google Cloud SDK
           uses: google-github-actions/setup-gcloud@v0.2.0
           with:
