--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -22,7 +22,7 @@ jobs:
           run: npm run build
 
         - name: Build Docker
-          run: docker-compose build
+          run: docker compose up --build
 
         - name: Set up Google Cloud SDK
           uses: google-github-actions/setup-gcloud@v0.2.0
