--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -1,38 +1,51 @@
-name: Run Google Cloud Deployment
+name: Deploy to Google Cloud
 
-on: push
+on: 
+  push:
+    branches: [main]
 
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest
 
-        steps:
-        - name: Checkout repository
-          uses: actions/checkout@v2
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-        - name: Set up Node.js
-          uses: actions/setup-node@v2
-          with:
-            node-version: '18'
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
 
-        - name: Install dependencies
-          run: npm install
+    - name: Install dependencies
+      run: npm ci
 
-        - name: Build project
-          run: npm run build
+    - name: Build project
+      run: npm run build
 
-        - name: Build Docker
-          run: docker compose up
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-        - name: Set up Google Cloud SDK
-          uses: google-github-actions/setup-gcloud@v0.2.0
-          with:
-            project_id: ${{ secrets.GCP_PROJECT_ID }}
-            service_account_key: ${{ secrets.GCP_SA_KEY }}
-            export_default_credentials: true
+    - name: Set up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
 
-        - name: Configure gcloud project
-          run: gcloud config set project nomadic-vertex-444204-s5
+    - name: Configure Docker
+      run: |
+        gcloud auth configure-docker
 
-        - name: Deploy to Google Cloud
-          run: gcloud app deploy
+    - name: Build Docker Image
+      run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.sha }} .
+
+    - name: Push Docker Image
+      run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.sha }}
+
+    - name: Deploy to Google Cloud Run
+      run: |
+        gcloud run deploy my-app \
+          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.sha }} \
+          --platform managed \
+          --region us-central1 \
+          --allow-unauthenticated
