--- a/.github/workflows/gcloud.yml
+++ b/.github/workflows/gcloud.yml
@@ -1,51 +1,38 @@
-name: Deploy to Google Cloud
+name: Run Google Cloud Deployment
 
-on: 
-  push:
-    branches: [main]
+on: push
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+    deploy:
+        runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+        steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-        cache: 'npm'
+        - name: Set up Node.js
+          uses: actions/setup-node@v2
+          with:
+            node-version: '18'
 
-    - name: Install dependencies
-      run: npm ci
+        - name: Install dependencies
+          run: npm install
 
-    - name: Build project
-      run: npm run build
+        - name: Build project
+          run: npm run build
 
-    - name: Authenticate to Google Cloud
-      uses: google-github-actions/auth@v1
-      with:
-        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        - name: Build Docker
+          run: docker compose up --build -d
 
-    - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v1
+        - name: Set up Google Cloud SDK
+          uses: google-github-actions/setup-gcloud@v0.2.0
+          with:
+            project_id: ${{ secrets.GCP_PROJECT_ID }}
+            service_account_key: ${{ secrets.GCP_SA_KEY }}
+            export_default_credentials: true
 
-    - name: Configure Docker
-      run: |
-        gcloud auth configure-docker
+        - name: Configure gcloud project
+          run: gcloud config set project nomadic-vertex-444204-s5
 
-    - name: Build Docker Image
-      run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.sha }} .
-
-    - name: Push Docker Image
-      run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.sha }}
-
-    - name: Deploy to Google Cloud Run
-      run: |
-        gcloud run deploy my-app \
-          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:${{ github.sha }} \
-          --platform managed \
-          --region us-central1 \
-          --allow-unauthenticated
+        - name: Deploy to Google Cloud
+          run: gcloud app deploy
