--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,8 @@
 runtime: nodejs18  # Specify the Node.js runtime version
 
 handlers:
-  - url: /static
-    static_dir: dist/static
+  - url: /assets
+    static_dir: dist/assets
 
   - url: /.*
     static_files: dist/index.html
